Finished DBScriptRunner to BeepBeep renaming

--- a/pom.xml
+++ b/pom.xml
@@ -2,13 +2,13 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.github.gquintana.dbscriptrunner</groupId>
-  <artifactId>dbscriptrunner</artifactId>
+  <groupId>com.github.gquintana.beepbeep</groupId>
+  <artifactId>beepbeep</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>dbscriptrunner</name>
-  <url>http://maven.apache.org</url>
+  <name>beepbeep</name>
+  <url>https://github.com/gquintana/beepbeep</url>
 
   <properties>
     <java.version>1.8</java.version>
