--- a/pom.xml
+++ b/pom.xml
@@ -33,10 +33,14 @@
       <scope>runtime</scope>
     </dependency>
     <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.6.0</version>
+    </dependency>
+    <dependency>
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpclient</artifactId>
       <version>4.5.2</version>
-      <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
