--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,14 @@
           </execution>
         </executions>
       </plugin>
+<plugin>
+    <groupId>org.eluder.coveralls</groupId>
+    <artifactId>coveralls-maven-plugin</artifactId>
+    <version>4.1.0</version>
+    <configuration>
+        <repoToken>Gv4iwO5NLcwnVY2jeduks2iOU45fkN3st</repoToken>
+    </configuration>
+</plugin>
       <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
         <version>2.6</version>
