--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,9 +12,9 @@ install:
         [System.IO.Compression.ZipFile]::ExtractToDirectory("C:\maven-bin.zip", "C:\maven")
       }
   # Prepend Java entry, remove Ruby entry (C:\Ruby193\bin;) from PATH
-  - cmd: SET PATH=C:\maven\apache-maven-3.3.9\bin;%JAVA_HOME%\bin;%PATH:C:\Ruby193\bin;=%
-  - cmd: SET MAVEN_OPTS=-XX:MaxPermSize=1g -Xmx1g
-  - cmd: SET JAVA_OPTS=-XX:MaxPermSize=1g -Xmx1g
+  - cmd: SET PATH=C:\maven\apache-maven-3.3.9\bin;%JAVA_HOME%\bin;%PATH
+  - cmd: SET MAVEN_OPTS=-XX:MaxPermSize=1g -Xmx2g
+  - cmd: SET JAVA_OPTS=-XX:MaxPermSize=1g -Xmx2g
   - cmd: mvn --version
   - cmd: java -version
 build_script:
@@ -23,3 +23,4 @@ test_script:
   - mvn test -B
 cache:
   - C:\maven
+  - C:\Users\appveyor\.m2
