--- a/pom.xml
+++ b/pom.xml
@@ -180,7 +180,10 @@
           </execution>
         </executions>
       </plugin>
-
+      <plugin>
+        <artifactId>maven-release-plugin</artifactId>
+        <version>2.5.1</version>
+      </plugin>
     </plugins>
   </build>
 
