--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
   <groupId>com.github.gquintana.beepbeep</groupId>
   <artifactId>beepbeep</artifactId>
-  <version>0.1.0</version>
+  <version>1.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>beepbeep</name>
@@ -198,7 +198,7 @@
     <connection>scm:git:https://github.com/gquintana/beepbeep.git</connection>
     <developerConnection>scm:git:https://github.com/gquintana/beepbeep.git</developerConnection>
     <url>https://github.com/gquintana/beepbeep.git</url>
-    <tag>v0.1.0</tag>
+    <tag>HEAD</tag>
   </scm>
   <prerequisites>
     <maven>3.0.4</maven>
