--- a/circle.yml
+++ b/circle.yml
@@ -3,8 +3,11 @@ machine:
     version: oraclejdk8
 
 test:
+  pre:
+    - ./elasticsearch-start.sh
   override:
     - mvn integration-test jacoco:report coveralls:report
   post:
+    - ./elasticsearch-stop.sh
     - mkdir -p $CIRCLE_TEST_REPORTS/junit/
     - find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
