--- a/circle.yml
+++ b/circle.yml
@@ -4,10 +4,10 @@ machine:
 
 test:
   pre:
-    - ./elasticsearch-start.sh
+    - sh elasticsearch-start.sh
   override:
     - mvn integration-test jacoco:report coveralls:report
   post:
-    - ./elasticsearch-stop.sh
+    - sh elasticsearch-stop.sh
     - mkdir -p $CIRCLE_TEST_REPORTS/junit/
     - find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
