--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,2 +1,17 @@
-# Config Translation Error
-# Could not find stored inference data.  Please run a build and try again.
+---
+version: 2
+jobs:
+  build:
+    machine: true
+    steps:
+      - checkout
+      - restore_cache:
+          key: circleci-beepbeep-{{ checksum "pom.xml" }}
+      - run: mvn dependency:go-offline
+      - save_cache:
+          paths:
+            - ~/.m2
+          key: circleci-beepbeep-{{ checksum "pom.xml" }}
+      - run: mvn package
+      - store_test_results:
+          path: target/surefire-reports
