--- a/src/test/resources/com/github/gquintana/beepbeep/config/elasticsearch.yml
+++ b/src/test/resources/com/github/gquintana/beepbeep/config/elasticsearch.yml
@@ -2,7 +2,7 @@
 type: elasticsearch
 charset: ISO-8859-1
 url: http://localhost:9200
-scriptStore: beepbeep/script
+scriptStore: beepbeep
 scripts: elasticsearch/init/*.sql
 variables:
   test.1: "Test 1"
